--- a/templates/rsync_plugins.sh.j2
+++ b/templates/rsync_plugins.sh.j2
@@ -2,13 +2,13 @@
 
 while true
 do
-  {% for plugin in moodle_plugins_dev %}
+  {% for plugin in moodle_plugins_dev -%}
 
-  {% set plugin_dir = 
+  {%- set plugin_dir = 
     moodle_location ~ "/" ~ 
     plugin.type|regex_replace('block', 'blocks') ~ 
     plugin.location|regex_replace(plugin.location | dirname, '')
-  %}
+  -%}
 
   rsync -r --delete {{ plugin.location }}/ {{ plugin_dir }}/
 
