--- a/templates/config.php.j2
+++ b/templates/config.php.j2
@@ -14,6 +14,7 @@ $CFG->prefix    = '{{ moodle_db_prefix }}';
 $CFG->dboptions = array (
   'dbpersist' => 0,
   'dbsocket' => 0,
+  'dbport' => {{ moodle_db_port }},
 );
 
 $CFG->wwwroot   = '{{ moodle_wwwroot }}';
